--- a/force-app/main/default/layouts/Registration_Batch__c-Registration Batch Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Registration_Batch__c-Registration Batch Layout.layout-meta.xml
@@ -34,6 +34,10 @@
                 <behavior>Edit</behavior>
                 <field>Default_Transfer__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Is_Ready__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
