Added Open Entry to offering layout.

--- a/force-app/main/default/layouts/hed__Course_Offering__c-Base Offering Details.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Course_Offering__c-Base Offering Details.layout-meta.xml
@@ -30,6 +30,10 @@
                 <behavior>Edit</behavior>
                 <field>Requires_Canvas__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Open_Entry__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -94,7 +98,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h8D000002r0EG</masterLabel>
+        <masterLabel>00h7z000001rLZw</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
