Instructor object setup complete

--- a/force-app/main/default/layouts/Instructor__c-Instructor Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Instructor__c-Instructor Layout.layout-meta.xml
@@ -10,6 +10,14 @@
                 <behavior>Required</behavior>
                 <field>Name</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Primary_Contact__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Bio__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
