EDA field changes not allowed

--- a/force-app/main/default/layouts/hed__Plan_Requirement__c-Requirement Container.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Plan_Requirement__c-Requirement Container.layout-meta.xml
@@ -20,6 +20,10 @@
                 <field>hed__Sequence__c</field>
             </layoutItems>
             <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Requires_All_Child_Reqs__c</field>
+            </layoutItems>
+            <layoutItems>
                 <behavior>Required</behavior>
                 <field>Required_Amount__c</field>
             </layoutItems>
