--- a/force-app/main/default/layouts/hed__Program_Plan__c-Program Config.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Program_Plan__c-Program Config.layout-meta.xml
@@ -27,6 +27,10 @@
                 <behavior>Edit</behavior>
                 <field>Tuition__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Is_Standard_Tuition__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -47,7 +51,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Is_Standard_Tuition__c</field>
+                <field>Time_Frame__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
