Added credits to generic

--- a/force-app/main/default/layouts/hed__Plan_Requirement__c-Generic Requirement.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Plan_Requirement__c-Generic Requirement.layout-meta.xml
@@ -33,6 +33,14 @@
                 <behavior>Edit</behavior>
                 <field>hed__Plan_Requirement__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>hed__Credits__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>hed__Category__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
@@ -52,7 +60,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hOx000003ea7t</masterLabel>
+        <masterLabel>00hQL000003AbfB</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
