--- a/force-app/main/default/layouts/hed__Plan_Requirement__c-Subject Requirement.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Plan_Requirement__c-Subject Requirement.layout-meta.xml
@@ -23,6 +23,10 @@
                 <behavior>Required</behavior>
                 <field>hed__Description__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Level_Requirement_Max__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
