New fields added to layout & query

--- a/force-app/main/default/layouts/hed__Plan_Requirement__c-Subject Requirement.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Plan_Requirement__c-Subject Requirement.layout-meta.xml
@@ -13,6 +13,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>Subject__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>hed__Category__c</field>
             </layoutItems>
             <layoutItems>
@@ -23,10 +27,6 @@
                 <behavior>Required</behavior>
                 <field>hed__Description__c</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Level_Requirement_Max__c</field>
-            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -36,6 +36,14 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>hed__Plan_Requirement__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Level_Requirement__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Level_Requirement_Max__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -56,7 +64,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hOx000003eZBp</masterLabel>
+        <masterLabel>00hQL000003AbfD</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
