--- a/force-app/main/default/layouts/hed__Plan_Requirement__c-Requirement Container.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Plan_Requirement__c-Requirement Container.layout-meta.xml
@@ -21,14 +21,6 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Requires_All_Child_Reqs__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Required</behavior>
-                <field>Required_Amount__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
                 <field>hed__Description__c</field>
             </layoutItems>
             <layoutItems>
@@ -44,6 +36,18 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>hed__Plan_Requirement__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>hed__Credits__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Requires_All_Child_Reqs__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Nonstandard_Container__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -75,7 +79,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hOx000003eamD</masterLabel>
+        <masterLabel>00hQL000003Jkoe</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
