--- a/force-app/main/default/layouts/Plan_Admission_Requirement__c-Plan Admission Requirement Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Plan_Admission_Requirement__c-Plan Admission Requirement Layout.layout-meta.xml
@@ -28,6 +28,10 @@
                 <behavior>Edit</behavior>
                 <field>Sequence__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Show_in_Detail_Card__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
