--- a/force-app/main/default/layouts/hed__Plan_Requirement__c-Subject Requirement.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Plan_Requirement__c-Subject Requirement.layout-meta.xml
@@ -20,7 +20,7 @@
                 <field>hed__Category__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>hed__Sequence__c</field>
             </layoutItems>
             <layoutItems>
@@ -45,6 +45,10 @@
                 <behavior>Edit</behavior>
                 <field>Level_Requirement_Max__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>hed__Credits__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
@@ -64,7 +68,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hQL000003AbfD</masterLabel>
+        <masterLabel>00h7x000004YWmb</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
