Caveats for plans added

--- a/force-app/main/default/layouts/hed__Plan_Requirement__c-Course Requirement.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Plan_Requirement__c-Course Requirement.layout-meta.xml
@@ -39,6 +39,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>Program_Plan_Caveat__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>hed__Plan_Requirement__c</field>
             </layoutItems>
             <layoutItems>
