--- a/force-app/main/default/layouts/hed__Program_Plan__c-Program Config.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Program_Plan__c-Program Config.layout-meta.xml
@@ -86,13 +86,17 @@
         <sortField>hed__Sequence__c</sortField>
         <sortOrder>Asc</sortOrder>
     </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Program_Plan_Caveat__c.Program_Plan__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hQL000002xYxb</masterLabel>
+        <masterLabel>00h7x000004YWmc</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
