--- a/force-app/main/default/layouts/hed__Program_Plan__c-Program Config.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Program_Plan__c-Program Config.layout-meta.xml
@@ -31,6 +31,10 @@
                 <behavior>Edit</behavior>
                 <field>Is_Standard_Tuition__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Is_Concentration__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
