--- a/force-app/main/default/layouts/Deadline__c-Deadline Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Deadline__c-Deadline Layout.layout-meta.xml
@@ -26,6 +26,10 @@
                 <behavior>Edit</behavior>
                 <field>Occurance__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Account__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
