--- a/force-app/main/default/layouts/Instructor__c-Instructor Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Instructor__c-Instructor Layout.layout-meta.xml
@@ -18,6 +18,10 @@
                 <behavior>Edit</behavior>
                 <field>Bio__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Title__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
