HTML field added for admission requirements

--- a/force-app/main/default/layouts/Plan_Admission_Requirement__c-Plan Admission Requirement Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Plan_Admission_Requirement__c-Plan Admission Requirement Layout.layout-meta.xml
@@ -18,6 +18,10 @@
                 <behavior>Required</behavior>
                 <field>Program_Plan__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Long_Description__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
