Layouts updated with Canvas SIS Ids

--- a/force-app/main/default/layouts/hed__Course_Offering__c-Base Offering Details.layout-meta.xml
+++ b/force-app/main/default/layouts/hed__Course_Offering__c-Base Offering Details.layout-meta.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
+    <excludeButtons>OpenSlackRecordChannel</excludeButtons>
     <layoutSections>
         <customLabel>false</customLabel>
         <detailHeading>false</detailHeading>
@@ -97,6 +98,10 @@
                 <field>lms_hed__LMS_Offering_ID__c</field>
             </layoutItems>
             <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Canvas_Section_SIS_Id__c</field>
+            </layoutItems>
+            <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>Canvas_Link__c</field>
             </layoutItems>
@@ -170,7 +175,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h7z000008bKZf</masterLabel>
+        <masterLabel>00hO400000531GC</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
