Short Description field so middleware can provide a small summary

--- a/force-app/main/default/layouts/Registration__c-Registration Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Registration__c-Registration Layout.layout-meta.xml
@@ -20,6 +20,10 @@
                 <behavior>Required</behavior>
                 <field>Online_Account__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Short_Description__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
